@@ -266,6 +266,9 @@ void makecreature(creaturest &cr, short type) {
         }
 
         cr.align = LCSrandom(3) - 1;
+        sk = LCSrandom(2) + 1;
+        cr.skill[SKILL_WRITING] = sk;
+        randomskills -= sk;
         break;
 
     case CREATURE_LANDLORD:
